Fix the following issues for High Contrast Theme:   1) Schema diff compare button icon is not visible on hover.   2) Schema diff for identical section text is not readable due to the same color as the background.   3) Removed extra variables used for set text color for explain - Analysis section (Issue related dark theme.).    4) Issue related to the disabled toggle button.
refs #5653

--- a/web/pgadmin/misc/static/explain/scss/_explain.scss
+++ b/web/pgadmin/misc/static/explain/scss/_explain.scss
@@ -49,7 +49,6 @@ div.tab-pane[data-explain-tabpanel=table] {
   td.pga-ex-inclusive-2,
   td.pga-ex-rowsx-2 {
     background-color: $explain-sev-2-bg;
-    color: $explain-sev-2-color;
   }
 
   td.pga-ex-exclusive-3,
